src/App.css
 .App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
}

.App-link {
  color: #09d3ac;
}

/*
.colored {
  background-color: black!important;
} */

.mastheadImage {
  opacity: .8;
}

.carousel-caption-logo {
    bottom: 30%!important;
}

@media screen and (max-width: 700px) {
  .mcmocfLogo {
    margin-left: auto;
    margin-right: auto;
    width: 300px;
  /* filter: drop-shadow(0 0 .25rem black); */
  }
}

@media screen and (min-width: 700px) {
  .mcmocfLogo {
    margin-left: auto;
    margin-right: auto;
    width: 700px;
  }
}

.App-header {
  min-height: 70vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.bigBackground {
  background: linear-gradient( rgba(0, 0, 0, .3), rgba(0, 0, 0, .3) ), url('/pic5.jpg');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.headerCaption {
  bottom: 10px!important

}

.contentContainer {
  margin-top: 150px;

}

.shadowText {
  filter: drop-shadow(0 0 .3rem black);
}

.centerText {
  text-align: center;
}

.pinkText {
  color: #149da6!important;
}

.michelePhoto {
  width: 320px;
  border-radius: 50%
}

